--- a/scss/typography.scss
+++ b/scss/typography.scss
@@ -106,6 +106,7 @@ a.a {
   &:hover:not(:visited) {
     color: $link-hover;
     outline: none;
+    text-decoration: underline;
   }
 
   &:visited {
@@ -117,15 +118,9 @@ a.a {
   }
 }
 
-a.a, a {
-  &:focus:not(:active):not(:hover) {
-    outline: none;
-    text-decoration: underline !important;
-  }
-
-  &:focus:not(:active):hover {
-    outline: none;
-  }
+a.a:focus, a:focus {
+  outline: none;
+  text-decoration: underline;
 }
 
 /* ====================================================== */
