--- a/scss/utility.scss
+++ b/scss/utility.scss
@@ -21,7 +21,7 @@
 .rds-tr-0 { border-top-right-radius: 0 !important; }
 .rds-bl-0 { border-bottom-left-radius: 0 !important; }
 .rds-br-0 { border-bottom-right-radius: 0 !important; }
-.rds-inherit { border-radius: inherit; }
+.rds-inherit { border-radius: inherit !important; }
 
 .no-background {
   background: none !important;
